[package]
name = "emit-hub"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.4"
actix-ws = "0.3.0"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
redb = "2.1"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures-util = "0.3"
clap = { version = "4.0", features = ["derive"] }
toml = "0.8.22"
env_logger = "0.11.8"
log = "0.4.27"